# Alicization

./: .gitignore  CLAUDE.md  HANDOFF.md  MEMORY.md  README.md  pyproject.toml
.claude/: protected-paths.txt  settings.json  verify.sh
.claude/agents/: claim-verifier.md  lit-reviewer.md  plan-critic.md  result-analyst.md
.claude/hooks/: contracts-after-edit.sh  format_lint.py  protect_paths.py  require-preallocate.sh  (+2 more)
.context/: current-focus.md
docs/: TODO.md  attack_range_redqueen.md  biology.md  carnivore_riparian.md  cleanup_audit.md  conventions.md  day_night.md  experiments.md  herbivore_overpopulation.md  landscape_of_fear.md  mortality.md  multispecies_ecology.md  multispecies_feasibility.md  mutation_sigma_heritable.md  optimization_audit.md  rebalance.md  scale_and_density.md  test_coverage_audit.md  three_d.md  trait_addition_feasibility.md  trait_defense_catalog.md  trait_defense_landing.md  trait_evolution.md  trait_roadmap.md  trait_stage0_analysis.md  vision_geometry_unlock.md  vision_radius_heritable.md  water_fix_buffer.md  water_fix_decision.md  water_fix_provisioning.md  water_fix_retune.md  water_system.md  web_cleanup_audit.md
explorations/: README.md
lit/: literature-log.md
scripts/: check.py  golden.json  probe_diel.py  run_headless.py  run_live.py
server/: app.py  protocol.py
tests/: test_kernel.py  test_terrain.py
underworld/: __init__.py  brain.py  config.py  dynamics.py  ecology.py  genome.py  memory.py  metrics.py  reproduction.py  sensors.py  spatial.py  state.py  step.py  terrain.py
web/: index.html  main.js  render.js
(+29 files in other folders)
